fix: replace margin-collapse hack with display flow-root in WelcomeSlider

--- a/src/modules/HomePage/components/WelcomeSlider/WelcomeSlider.module.scss
+++ b/src/modules/HomePage/components/WelcomeSlider/WelcomeSlider.module.scss
@@ -3,6 +3,7 @@
 
 .wrapper {
   margin-inline: -$content-padding-mobile;
+  display: flow-root;
 
   @include media-up($breakpoint-tablet) {
     margin-inline: 0;
